code: fix review bugs